--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -175,7 +175,7 @@
               <a *ngIf="viewFlag.viewSaleReport" href="javascript:void(0)" [routerLink]="['/report/sale']" id="collapseExample7">Sale</a>
               <a *ngIf="viewFlag.viewCashCollectionReport" href="javascript:void(0)" [routerLink]="['/report/cashCollection']" id="collapseExample7">Cash Collection</a>
               <a *ngIf="viewFlag.viewPurchaseReport" href="javascript:void(0)" [routerLink]="['/report/purchase']" id="collapseExample7">Purchase</a>
-              <a *ngIf="viewFlag.viewExpenesReport" href="javascript:void(0)" [routerLink]="['/report/expenes']" id="collapseExample7">Expenses </a>
+              <a *ngIf="viewFlag.viewExpensesReport" href="javascript:void(0)" [routerLink]="['/report/expenes']" id="collapseExample7">Expenses </a>
               <a *ngIf="viewFlag.viewInventoryReport" href="javascript:void(0)" [routerLink]="['/report/inventory']" id="collapseExample7">Inventory</a>
               <a *ngIf="viewFlag.viewReminder" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Reminder </a>
               <!-- <a *ngIf="viewFlag.viewInventoryReport" href="javascript:void(0)" [routerLink]="['/report/inventory']" id="collapseExample7">Sale Profit </a> -->
