--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -214,6 +214,39 @@
                                                             [(ngModel)]="data.type" class="example-margin">type
                                                         </mat-slide-toggle>
                                                     </div>
+
+                                                    <div class="col-md-12 header mt-md-3">
+                                                        <h2>Shopwise Setting</h2>
+                                                    </div>
+                                                    <div class="col-xl-1 col-lg-1" style=" margin-right: 53px;">
+                                                        <mat-slide-toggle name="CustomerShopWise" color="primary" #CustomerShopWisecontrol
+                                                            [(ngModel)]="data.CustomerShopWise" class="example-margin">CustomerShopWise
+                                                        </mat-slide-toggle>
+                                                    </div>
+                                                    <div class="col-xl-1 col-lg-1" style="padding:0;">
+                                                        <mat-slide-toggle name="EmployeeShopWise" color="primary" #EmployeeShopWisecontrol
+                                                            [(ngModel)]="data.EmployeeShopWise" class="example-margin">EmployeeShopWise
+                                                        </mat-slide-toggle>
+                                                    </div>
+                                                    <div class="col-xl-2 col-lg-1"
+                                                        style="padding:0; padding-left: 43px;">
+                                                        <mat-slide-toggle name="FitterShopWise" color="primary"
+                                                            #FitterShopWisecontrol [(ngModel)]="data.FitterShopWise"
+                                                            class="example-margin">FitterShopWise</mat-slide-toggle>
+                                                    </div>
+                                                    <div class="col-xl-1 col-lg-1"
+                                                        style="padding:0; padding-left: 21px;">
+                                                        <mat-slide-toggle name="DoctorShopWise" color="primary" #DoctorShopWisecontrol
+                                                            [(ngModel)]="data.DoctorShopWise" class="example-margin">DoctorShopWise
+                                                        </mat-slide-toggle>
+                                                    </div>
+                                                    <div class="col-xl-1 col-lg-1"
+                                                        style="padding:0; padding-left: 21px;">
+                                                        <mat-slide-toggle name="SupplierShopWise" color="primary" #SupplierShopWisecontrol
+                                                            [(ngModel)]="data.SupplierShopWise" class="example-margin">SupplierShopWise
+                                                        </mat-slide-toggle>
+                                                    </div>
+
                                                     <div class="col-md-12  header mt-md-4">
                                                         <h2>Barcode Select</h2>
                                                     </div>
